trying stuff aoc day 19

--- a/2015/day19.ipynb
+++ b/2015/day19.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "def load_input(filename: str) -> tuple[list[tuple[str, str]], str]:\n",
@@ -41,8 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[('Al', 'ThF'),\n ('Al', 'ThRnFAr'),\n ('B', 'BCa'),\n ('B', 'TiB'),\n ('B', 'TiRnFAr'),\n ('Ca', 'CaCa'),\n ('Ca', 'PB'),\n ('Ca', 'PRnFAr'),\n ('Ca', 'SiRnFYFAr'),\n ('Ca', 'SiRnMgAr'),\n ('Ca', 'SiTh'),\n ('F', 'CaF'),\n ('F', 'PMg'),\n ('F', 'SiAl'),\n ('H', 'CRnAlAr'),\n ('H', 'CRnFYFYFAr'),\n ('H', 'CRnFYMgAr'),\n ('H', 'CRnMgYFAr'),\n ('H', 'HCa'),\n ('H', 'NRnFYFAr'),\n ('H', 'NRnMgAr'),\n ('H', 'NTh'),\n ('H', 'OB'),\n ('H', 'ORnFAr'),\n ('Mg', 'BF'),\n ('Mg', 'TiMg'),\n ('N', 'CRnFAr'),\n ('N', 'HSi'),\n ('O', 'CRnFYFAr'),\n ('O', 'CRnMgAr'),\n ('O', 'HP'),\n ('O', 'NRnFAr'),\n ('O', 'OTi'),\n ('P', 'CaP'),\n ('P', 'PTi'),\n ('P', 'SiRnFAr'),\n ('Si', 'CaSi'),\n ('Th', 'ThCa'),\n ('Ti', 'BP'),\n ('Ti', 'TiTi'),\n ('e', 'HF'),\n ('e', 'NAl'),\n ('e', 'OMg')]"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "REPLACEMENTS"
    ],
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
@@ -84,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def possible_new_molecules(molecule, replacements1, replacements2):\n",
@@ -115,8 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of possible new molecules after 1 replacement is 518.\n"
+     ]
+    }
+   ],
    "source": [
     "result = possible_new_molecules(MOLECULE, REPLACEMENTS1, REPLACEMENTS2)\n",
     "\n",
@@ -146,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "MUTABLE_ELEMENTS = set()\n",
@@ -209,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "ENCODED_START_POINT = encode('e')\n",
@@ -233,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "ENCODED_FORWARD_REPLACEMENTS = {}\n",
@@ -261,8 +278,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{1: {(11, 4), (11, 14, 4, 15)},\n 2: {(2, 3), (12, 2), (12, 14, 4, 15)},\n 3: {(3, 3),\n  (9, 2),\n  (9, 14, 4, 15),\n  (10, 11),\n  (10, 14, 4, 16, 4, 15),\n  (10, 14, 6, 15)},\n 4: {(3, 4), (9, 6), (10, 1)},\n 5: {(5, 3),\n  (7, 11),\n  (7, 14, 4, 16, 4, 15),\n  (7, 14, 6, 15),\n  (8, 2),\n  (8, 14, 4, 15),\n  (13, 1, 15),\n  (13, 4, 16, 4, 16, 4, 15),\n  (13, 4, 16, 6, 15),\n  (13, 6, 16, 4, 15)},\n 6: {(2, 4), (12, 6)},\n 7: {(5, 10), (13, 4, 15)},\n 8: {(5, 9), (7, 14, 4, 15), (8, 12), (13, 4, 16, 4, 15), (13, 6, 15)},\n 9: {(3, 9), (9, 12), (10, 14, 4, 15)},\n 10: {(3, 10)},\n 11: {(11, 3)},\n 12: {(2, 9), (12, 12)},\n 0: {(5, 4), (7, 1), (8, 6)}}"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ENCODED_FORWARD_REPLACEMENTS"
    ],
@@ -272,8 +298,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{(11, 4): 1,\n (11, 14, 4, 15): 1,\n (2, 3): 2,\n (12, 2): 2,\n (12, 14, 4, 15): 2,\n (3, 3): 3,\n (9, 2): 3,\n (9, 14, 4, 15): 3,\n (10, 14, 4, 16, 4, 15): 3,\n (10, 14, 6, 15): 3,\n (10, 11): 3,\n (3, 4): 4,\n (9, 6): 4,\n (10, 1): 4,\n (13, 1, 15): 5,\n (13, 4, 16, 4, 16, 4, 15): 5,\n (13, 4, 16, 6, 15): 5,\n (13, 6, 16, 4, 15): 5,\n (5, 3): 5,\n (7, 14, 4, 16, 4, 15): 5,\n (7, 14, 6, 15): 5,\n (7, 11): 5,\n (8, 2): 5,\n (8, 14, 4, 15): 5,\n (2, 4): 6,\n (12, 6): 6,\n (13, 4, 15): 7,\n (5, 10): 7,\n (13, 4, 16, 4, 15): 8,\n (13, 6, 15): 8,\n (5, 9): 8,\n (7, 14, 4, 15): 8,\n (8, 12): 8,\n (3, 9): 9,\n (9, 12): 9,\n (10, 14, 4, 15): 9,\n (3, 10): 10,\n (11, 3): 11,\n (2, 9): 12,\n (12, 12): 12,\n (5, 4): 0,\n (7, 1): 0,\n (8, 6): 0}"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ENCODED_BACKWARD_REPLACEMENTS"
    ],
@@ -283,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "def has_collision(set_1: set[tuple[int]], set_2: set[tuple[int]]) -> bool:\n",
@@ -336,8 +371,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start point is = (0,)\n",
+      "end point is = (13, 10, 14, 3, 9, 12, 6, 16, 3, 9, 12, 14, 4, 15, 10, 11, 4, 15, 3, 10, 11, 10, 11, 9, 2, 3, 3, 10, 14, 10, 14, 12, 12, 6, 15, 9, 2, 3, 9, 6, 16, 9, 12, 14, 4, 15, 4, 15, 3, 10, 14, 2, 9, 6, 15, 9, 14, 3, 9, 12, 14, 4, 15, 3, 10, 11, 3, 3, 4, 15, 9, 2, 3, 3, 9, 12, 12, 14, 4, 15, 3, 10, 14, 10, 1, 16, 10, 11, 14, 4, 15, 15, 3, 10, 14, 2, 4, 15, 3, 3, 10, 14, 10, 11, 3, 3, 3, 4, 16, 3, 9, 12, 2, 3, 10, 11, 3, 10, 11, 9, 6, 15, 10, 14, 3, 9, 2, 4, 16, 3, 3, 4, 15, 3, 3, 3, 3, 10, 11, 3, 10, 14, 9, 14, 4, 15, 9, 2, 10, 11, 9, 14, 4, 15, 10, 14, 6, 15, 3, 4, 16, 4, 15, 3, 10, 14, 10, 1, 15, 12, 12, 12, 12, 12, 12, 12, 14, 9, 6, 15, 9, 12, 12, 12, 2, 10, 14, 10, 1, 15, 12, 12, 14, 9, 6, 15, 3, 4, 16, 2, 9, 2, 9, 12, 14, 10, 14, 6, 15, 10, 11, 3, 4, 15, 3, 10, 11, 4, 15, 9, 14, 4, 15, 3, 10, 14, 12, 2, 10, 11, 10, 14, 10, 1, 16, 3, 4, 15, 9, 14, 4, 15, 10, 11, 3, 4, 15, 3, 3, 10, 11, 3, 3, 3, 10, 14, 9, 14, 3, 4, 15, 4, 16, 9, 6, 15, 3, 9, 2, 3, 9, 2, 10, 14, 4, 16, 9, 2, 3, 4, 15, 3, 10, 1)\n",
+      "advancing forward from depth 0 to depth 1, front size is 1\n",
+      "advancing backward from depth 0 to depth 1, front size is 1\n",
+      "advancing forward from depth 1 to depth 2, front size is 3\n",
+      "advancing backward from depth 1 to depth 2, front size is 101\n",
+      "advancing forward from depth 2 to depth 3, front size is 18\n",
+      "advancing backward from depth 2 to depth 3, front size is 5076\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [12]\u001B[0m, in \u001B[0;36m<cell line: 36>\u001B[0;34m()\u001B[0m\n\u001B[1;32m     29\u001B[0m         \u001B[38;5;66;03m# backward depth is less, advance backward\u001B[39;00m\n\u001B[1;32m     30\u001B[0m         \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[1;32m     32\u001B[0m             current_backward_depth \u001B[38;5;241m=\u001B[39m advance_backward(current_backward_depth, current_backward_lower_depth_strings, current_backward_string)\n\u001B[0;32m---> 36\u001B[0m \u001B[43msolve_part_2\u001B[49m\u001B[43m(\u001B[49m\u001B[43mENCODED_START_POINT\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mENCODED_END_POINT\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Input \u001B[0;32mIn [12]\u001B[0m, in \u001B[0;36msolve_part_2\u001B[0;34m(encoded_start_point, encoded_end_point)\u001B[0m\n\u001B[1;32m     27\u001B[0m     current_forward_depth \u001B[38;5;241m=\u001B[39m advance_forward(current_forward_depth, current_forward_lower_depth_strings, current_forward_string)\n\u001B[1;32m     29\u001B[0m \u001B[38;5;66;03m# backward depth is less, advance backward\u001B[39;00m\n\u001B[1;32m     30\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m---> 32\u001B[0m     current_backward_depth \u001B[38;5;241m=\u001B[39m \u001B[43madvance_backward\u001B[49m\u001B[43m(\u001B[49m\u001B[43mcurrent_backward_depth\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcurrent_backward_lower_depth_strings\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcurrent_backward_string\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Input \u001B[0;32mIn [11]\u001B[0m, in \u001B[0;36madvance_backward\u001B[0;34m(current_backward_depth, current_backward_lower_or_equal_depth_strings, current_backward_string)\u001B[0m\n\u001B[1;32m     36\u001B[0m new_value \u001B[38;5;241m=\u001B[39m current[:index] \u001B[38;5;241m+\u001B[39m (replacement, ) \u001B[38;5;241m+\u001B[39m current[index\u001B[38;5;241m+\u001B[39m\u001B[38;5;28mlen\u001B[39m(match):]\n\u001B[1;32m     37\u001B[0m \u001B[38;5;66;03m#print(f'replace {match} at index {index} of {current} with {replacement} to make {new_value}')\u001B[39;00m\n\u001B[0;32m---> 38\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m new_value \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m current_backward_lower_or_equal_depth_strings:\n\u001B[1;32m     39\u001B[0m     current_backward_lower_or_equal_depth_strings\u001B[38;5;241m.\u001B[39madd(new_value)\n\u001B[1;32m     40\u001B[0m     new_backward_string\u001B[38;5;241m.\u001B[39madd(new_value)\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ],
    "source": [
     "def solve_part_2(encoded_start_point: tuple[int], encoded_end_point: tuple[int]) -> int:\n",
     "\n",
@@ -405,6 +468,146 @@
    "source": [
     "Can go about 10 steps forward from start and about 4 steps backward from end."
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "addForward(1, new int[] {11, 14, 4, 15})\n",
+      "addForward(1, new int[] {11, 4})\n",
+      "addForward(2, new int[] {2, 3})\n",
+      "addForward(2, new int[] {12, 14, 4, 15})\n",
+      "addForward(2, new int[] {12, 2})\n",
+      "addForward(3, new int[] {10, 11})\n",
+      "addForward(3, new int[] {10, 14, 4, 16, 4, 15})\n",
+      "addForward(3, new int[] {9, 2})\n",
+      "addForward(3, new int[] {3, 3})\n",
+      "addForward(3, new int[] {10, 14, 6, 15})\n",
+      "addForward(3, new int[] {9, 14, 4, 15})\n",
+      "addForward(4, new int[] {9, 6})\n",
+      "addForward(4, new int[] {10, 1})\n",
+      "addForward(4, new int[] {3, 4})\n",
+      "addForward(5, new int[] {8, 14, 4, 15})\n",
+      "addForward(5, new int[] {13, 4, 16, 6, 15})\n",
+      "addForward(5, new int[] {7, 14, 4, 16, 4, 15})\n",
+      "addForward(5, new int[] {7, 14, 6, 15})\n",
+      "addForward(5, new int[] {13, 6, 16, 4, 15})\n",
+      "addForward(5, new int[] {5, 3})\n",
+      "addForward(5, new int[] {8, 2})\n",
+      "addForward(5, new int[] {7, 11})\n",
+      "addForward(5, new int[] {13, 4, 16, 4, 16, 4, 15})\n",
+      "addForward(5, new int[] {13, 1, 15})\n",
+      "addForward(6, new int[] {12, 6})\n",
+      "addForward(6, new int[] {2, 4})\n",
+      "addForward(7, new int[] {5, 10})\n",
+      "addForward(7, new int[] {13, 4, 15})\n",
+      "addForward(8, new int[] {13, 4, 16, 4, 15})\n",
+      "addForward(8, new int[] {7, 14, 4, 15})\n",
+      "addForward(8, new int[] {8, 12})\n",
+      "addForward(8, new int[] {5, 9})\n",
+      "addForward(8, new int[] {13, 6, 15})\n",
+      "addForward(9, new int[] {9, 12})\n",
+      "addForward(9, new int[] {3, 9})\n",
+      "addForward(9, new int[] {10, 14, 4, 15})\n",
+      "addForward(10, new int[] {3, 10})\n",
+      "addForward(11, new int[] {11, 3})\n",
+      "addForward(12, new int[] {2, 9})\n",
+      "addForward(12, new int[] {12, 12})\n",
+      "addForward(0, new int[] {5, 4})\n",
+      "addForward(0, new int[] {7, 1})\n",
+      "addForward(0, new int[] {8, 6})\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in ENCODED_FORWARD_REPLACEMENTS.items():\n",
+    "    for vv in v:\n",
+    "        vvv = ', '.join([str(vvvv) for vvvv in vv])\n",
+    "        c = '{'\n",
+    "        d = '}'\n",
+    "        print(f'addForward({k}, new int[] {c}{vvv}{d})')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "addBackward(new int[] {11, 4}, 1);\n",
+      "addBackward(new int[] {11, 14, 4, 15}, 1);\n",
+      "addBackward(new int[] {2, 3}, 2);\n",
+      "addBackward(new int[] {12, 2}, 2);\n",
+      "addBackward(new int[] {12, 14, 4, 15}, 2);\n",
+      "addBackward(new int[] {3, 3}, 3);\n",
+      "addBackward(new int[] {9, 2}, 3);\n",
+      "addBackward(new int[] {9, 14, 4, 15}, 3);\n",
+      "addBackward(new int[] {10, 14, 4, 16, 4, 15}, 3);\n",
+      "addBackward(new int[] {10, 14, 6, 15}, 3);\n",
+      "addBackward(new int[] {10, 11}, 3);\n",
+      "addBackward(new int[] {3, 4}, 4);\n",
+      "addBackward(new int[] {9, 6}, 4);\n",
+      "addBackward(new int[] {10, 1}, 4);\n",
+      "addBackward(new int[] {13, 1, 15}, 5);\n",
+      "addBackward(new int[] {13, 4, 16, 4, 16, 4, 15}, 5);\n",
+      "addBackward(new int[] {13, 4, 16, 6, 15}, 5);\n",
+      "addBackward(new int[] {13, 6, 16, 4, 15}, 5);\n",
+      "addBackward(new int[] {5, 3}, 5);\n",
+      "addBackward(new int[] {7, 14, 4, 16, 4, 15}, 5);\n",
+      "addBackward(new int[] {7, 14, 6, 15}, 5);\n",
+      "addBackward(new int[] {7, 11}, 5);\n",
+      "addBackward(new int[] {8, 2}, 5);\n",
+      "addBackward(new int[] {8, 14, 4, 15}, 5);\n",
+      "addBackward(new int[] {2, 4}, 6);\n",
+      "addBackward(new int[] {12, 6}, 6);\n",
+      "addBackward(new int[] {13, 4, 15}, 7);\n",
+      "addBackward(new int[] {5, 10}, 7);\n",
+      "addBackward(new int[] {13, 4, 16, 4, 15}, 8);\n",
+      "addBackward(new int[] {13, 6, 15}, 8);\n",
+      "addBackward(new int[] {5, 9}, 8);\n",
+      "addBackward(new int[] {7, 14, 4, 15}, 8);\n",
+      "addBackward(new int[] {8, 12}, 8);\n",
+      "addBackward(new int[] {3, 9}, 9);\n",
+      "addBackward(new int[] {9, 12}, 9);\n",
+      "addBackward(new int[] {10, 14, 4, 15}, 9);\n",
+      "addBackward(new int[] {3, 10}, 10);\n",
+      "addBackward(new int[] {11, 3}, 11);\n",
+      "addBackward(new int[] {2, 9}, 12);\n",
+      "addBackward(new int[] {12, 12}, 12);\n",
+      "addBackward(new int[] {5, 4}, 0);\n",
+      "addBackward(new int[] {7, 1}, 0);\n",
+      "addBackward(new int[] {8, 6}, 0);\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in ENCODED_BACKWARD_REPLACEMENTS.items():\n",
+    "    kkk = ', '.join([str(kkkk) for kkkk in k])\n",
+    "    c = '{'\n",
+    "    d = '}'\n",
+    "    print(f'addBackward(new int[] {c}{kkk}{d}, {v});')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
