day 19 work and notes

--- a/2015/day19.ipynb
+++ b/2015/day19.ipynb
@@ -18,6 +18,10 @@
    "execution_count": 1,
    "outputs": [],
    "source": [
+    "import random\n",
+    "import time\n",
+    "\n",
+    "\n",
     "def load_input(filename: str) -> tuple[list[tuple[str, str]], str]:\n",
     "    with open(filename) as file:\n",
     "        replacements = []\n",
