--- a/2022/day03.ipynb
+++ b/2022/day03.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "# read lines in group of `group_size` lines at a time\n",
-    "def read_lines(filename: str, group_size: Optional[int] = None) -> Iterator[Union[str, tuple[str]]]:\n",
+    "def read_lines(filename: str, group_size: int | None = None) -> Iterator[str | tuple[str]]:\n",
     "    assert (group_size is None) or (type(group_size) == int and group_size >= 2)\n",
     "    with open(filename) as file:\n",
     "        rv = []\n",
@@ -54,6 +54,13 @@
     "        # make sure we don't leave any extra lines\n",
     "        assert not rv, f'{len(rv)} left unprocessed at the end of the file!'"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {
     "collapsed": false
    }
